<resources>
    <string name="app_name">Outdoorsie</string>
    <string name="bg1">bg1</string>
    <string name="adventure">Home of Adventure</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">LOGIN</string>
    <string name="activities">Activities</string>
    <string name="exit">Exit</string>
    <string name="profile">My Profile</string>
    <string name="my_activities">My Activities</string>
    <string name="view_my_profile">View My Profile</string>
    <string name="default_date">JAN 01 2022</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="activity_name">Activity Name</string>
    <string name="location">Location</string>
    <string name="select_city">Select City</string>
    <string name="select_activity">Select Activity</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="logging">Logging you in...</string>
    <string name="ss">My Saved Activities</string>
</resources>