<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg1"
        android:scaleType="centerCrop"
        android:src="@drawable/landing" />

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins"
        android:text="@string/app_name"
        android:textColor="@color/colorTextIcons"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appSloganText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/roboto"
        android:text="@string/adventure"
        android:textColor="@color/colorTextIcons"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/viewActivitiesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addActivitiesButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_bg"
        android:text="View Activities"
        android:textColor="@color/colorTextIcons"
        android:visibility="visible" />

    <Button
        android:id="@+id/addActivitiesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="89dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_bg"
        android:text="Add Activity"
        android:textColor="@color/colorTextIcons"
        android:visibility="visible" />

</RelativeLayout>